// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLink cover renders correctly 1`] = `
<div>
  <a
    aria-current="page"
    bg="#eb1d23"
    class=""
    data-testid="page-link-cover"
    direction="up"
    duration="1"
    href="/"
  >
    Cover
  </a>
</div>
`;

exports[`PageLink fade renders correctly 1`] = `
<div>
  <a
    aria-current="page"
    class=""
    data-testid="page-link-fade"
    href="/"
  >
    Fade
  </a>
</div>
`;

exports[`PageLink paintDrip renders correctly 1`] = `
<div>
  <a
    aria-current="page"
    class=""
    data-testid="page-link-paint"
    hex="#eb1d23"
    href="/"
  >
    Paint Drip
  </a>
</div>
`;

exports[`PageLink renders correctly 1`] = `
<div>
  <a
    aria-current="page"
    class=""
    data-testid="page-link"
    href="/"
  >
    Default
  </a>
</div>
`;

exports[`PageLink swipe renders correctly 1`] = `
<div>
  <a
    aria-current="page"
    class=""
    data-testid="page-link-swipe"
    direction="up"
    hex="#eb1d23"
    href="/"
    top="exit"
  >
    Swipe
  </a>
</div>
`;
